# libwit

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_c.sh  clean_c.sh  gen_vad.sh
.cargo/: config
example/: test.c
fake-sys/: Cargo.toml  build.sh
fake-sys/fake/: fake.c
fake-sys/src/: build.rs  build.sh  fake  fake.c
include/: wit.h
sox-sys/: Cargo.toml
sox-sys/src/: build.rs  lib.rs
src/: c.rs  client.rs  cmd.rs  lib.rs  log.rs  mic.rs  vad.rs
src/vad/: vad.c
vad/: Cargo.toml  Makefile.am  configure.ac  gen_vad.sh
vad/src/: lib.rs
vad/vad/: configure.ac  vad.c  vad.h
