[package]
name = "libwit"
version = "0.0.1"
authors = ["martin <martin@wit.ai", "oliv <oliv@wit.ai>", "willy <willy@wit.ai>"]

[lib]
name = "wit"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies.sox-sys]
path = "sox-sys"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"

[dependencies.fake-sys]
path = "fake-sys"

[dependencies.vad]
path = "vad"
